widget: Fix initial size in presence of non-default padding

https://bugzilla.gnome.org/show_bug.cgi?id=787710
(cherry picked from commit 41f55bc1c2a978491b3fa3d23cb4aeb0c900e2b1)